--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 *_vmake
 /RTL/Multipliers/Carry_Save_Multiplier/work/_temp
 /RTL/Processing_Element/work/_temp
+/RTL/Multipliers/Wallace_Tree_Multiplier
