Refactor Processing Element module and update testbench for improved signal handling

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 *_vmake
 /RTL/Multipliers/Carry_Save_Multiplier/work/_temp
 /RTL/Processing_Element/work/_temp
+/RTL/Processing_Element/work/@*
+/RTL/Processing_Element/work/_*
