Switching to Weight Stationary MMU
* Switching to a WS MMU
* Fully automating the testbench
* Removing the need for python to generate random matrices

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.qdb
 *_info
 *_vmake
+*.txt
 /RTL/Multipliers/Carry_Save_Multiplier/work/*
 /RTL/Multipliers/Wallace_Tree_Multiplier/work/*
 /RTL/Processing_Element/work/*
