Updated the processing element
Processing element now uses the default multipliers given by IP-vendor.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 *_info
 *_vmake
 *.txt
+*.py
 /RTL/Multipliers/Carry_Save_Multiplier/work/*
 /RTL/Multipliers/Wallace_Tree_Multiplier/work/*
 /RTL/Processing_Element/work/*
@@ -30,3 +31,4 @@ node_modules/*
 *.json
 *.wcfg
 testing.sv
+/RTL/work/*
